--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pg": "^8.16.3"
+    "@faker-js/faker": "^10.1.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
+    "pg": "^8.16.3",
+    "redis": "^5.10.0"
   }
 }
